crates/forge_domain/src/snapshots/forge_domain__run__tests__add_user_attachments_with_file_content.snap
---
source: crates/forge_domain/src/run.rs
expression: run.context
---
messages:
  - text:
      role: User
      content: "File: /path/to/file.txt\n\nHello, world!"
      tool_calls: ~
      model: test-model
