crates/forge_domain/src/snapshots/forge_domain__run__tests__add_user_attachments_with_image.snap
---
source: crates/forge_domain/src/run.rs
expression: run.context
---
messages:
  - image:
      url: "data:image/png;base64,base64data"
      mime_type: image/png
