crates/forge_domain/src/snapshots/forge_domain__run__tests__update_with_system_render_action_stores_content.snap
---
source: crates/forge_domain/src/run.rs
expression: run.context
---
messages:
  - text:
      role: System
      content: Rendered system prompt content
      tool_calls: ~
      model: ~
